--- a/MovieShop.API/appsettings.json
+++ b/MovieShop.API/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MovieShopDbConnection": "Server=DESKTOP-TDU42CF;Integrated Security=true;Initial catalog=MobieShop"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
