--- a/MovieShop.API/appsettings.json
+++ b/MovieShop.API/appsettings.json
@@ -8,6 +8,7 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-    }
+    },
+    "clientSPAUrl": "http://localhost:4200"
   }
 }
